# pyractice_array

./: .gitignore  README.md  pyproject.toml
src/ali_interview/: main.py
src/rotate_group_words/: main.py  rotate_group_words.py
tests/: test_rotate_group_words.py
