[project]
name = "rotate_group_words"
version = "0.4.6"
description = ""
authors = [
    {name = "TSX",email = "miladtsx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.1.1"

[project.urls]
Homepage = "https://github.com/miladtsx/pyractice_array"
Issues = "https://github.com/miladtsx/pyractice_array/issues"

[tool.poetry]
packages = [{include = "rotate_group_words", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rgw = "rotate_group_words.entry:main"